#--------------------------------------------------------------------------
# ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V01-00-54
2018-09-26 Mikhail S. Dubrovin
- AreaDetector.common_mode_apply
  - turn off common mode correction for algorithm #0
- update examples for uxi and pixis
	modified:   examples/ex_new_dets.py
	modified:   examples/ex_pixis.py
	modified:   examples/ex_source_dsname.py
	modified:   examples/ex_uxi.py
	modified:   src/AreaDetector.py

Tag: V01-00-53
2018-09-25 Mikhail S. Dubrovin
- add uxi and pixis
	new file:   app/epix10ka_id
	modified:   examples/ex_jungfrau_get_id.py
	new file:   examples/ex_pixis.py
	new file:   examples/ex_pixis_ipython.py
	new file:   examples/ex_uxi.py
	new file:   examples/ex_uxi_ipython.py
	modified:   src/DetectorTypes.py
	modified:   src/PyDataAccess.py
	modified:   src/PyDetectorAccess.py

Tag: V01-00-52
2018-09-25 Dan ???

Tag: V01-00-51
2018-09-14 Mikhail S. Dubrovin
- update epix10ka calibration scripts - 1st production version
	modified:   src/AreaDetector.py
	modified:   src/UtilsEpix.py
	modified:   src/UtilsEpix10ka.py

Tag: V01-00-50
2018-09-12 Mikhail S. Dubrovin
- update epix10ka calibration scripts
	new file:   app/epix10ka_deploy_constants
	modified:   app/epix10ka_offset_calibration
	modified:   app/epix10ka_pedestals_calibration
	modified:   src/GlobalUtils.py
	modified:   src/UtilsEpix.py
	modified:   src/UtilsEpix10ka.py

Tag: V01-00-49
2018-09-07 Mikhail S. Dubrovin
- add epix10ka calibration scripts
	new file:   app/epix10ka_offset_calibration
	new file:   app/epix10ka_pedestals_calibration
	new file:   examples/test-2018-09-07-epix-philip.py
	modified:   src/UtilsEpix.py
	new file:   src/UtilsEpix10ka.py

Tag: V01-00-47,48 - ???

Tag: V01-00-46
2018-07-05 Mikhail S. Dubrovin